citrix/tcp/redis-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: mysql
  namespace: citrix-operators
  annotations:
    ingress.citrix.com/insecure-port: '6379'
    ingress.citrix.com/insecure-service-type: tcp
    ingress.citrix.com/insecure-termination: allow
    kubernetes.io/ingress.class: tier-1-vpx
spec:
  rules:
    - host: redis.ocp.minguss.com
      http:
        paths:
          - path: /
            backend:
              serviceName: redis
              servicePort: 6379
status:
  loadBalancer: {}
